# Filecat

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml  sanitize.yml
bench/: bench_helpers.h  bench_latency.c  bench_open.c  bench_rss.c  bench_throughput.c  run.sh
bench/results/: 2026-06-21-linux-xeon-gold-6144.txt  2026-06-21-windows-msvc-partial.txt  README.md
docs/: DESIGN.md  porting-macos.md  threading.md
examples/: watch.c
include/filecat/: filecat.h
src/platform/linux/: filecat_linux.c
src/platform/macos/: filecat_mac.c  filecat_mac_old.c
src/platform/windows/: filecat_win.c
tests/: test_correctness.c  test_helpers.h  test_high_load.c  test_stress.c
